--- a/index.html
+++ b/index.html
@@ -32,32 +32,18 @@
           <i class="fab fa-youtube"></i> <span>👉 WAJIB SUBSCRIBE YOUTUBE HANXXYMODZ 👈</span>
               </a>
         <a href="https://www.instagram.com/hanxxyzs?igsh=YzljYTk1ODg3Zg==" class="link-item" target="_blank">
-          <i class="fab fa-instagtam"></i> <span>👉 WAJIB FOLLO INSTAGRAM ADMIN HANXXYMODZ 👈</span>
-          <a href="https://www.instagram.com/hanxxyzs?igsh=YzljYTk1ODg3Zg==" class="link-item" target="_blank">
+          <i class="fab fa-instagtam"></i> <span>👉 WAJIB FOLLOW INSTAGRAM ADMIN HANXXYMODZ 👈</span>
+          <a href="https://docs.google.com/forms/d/1jfWlYtZJUCZZYJvVp_CxmepbiBkzs2d5vKy7JvXUz4I/viewform" class="link-item" target="_blank">
           <i class="fab fa-instagtam"></i> <span>👉 HALAMAN ISI FORMULIR DAFTAR GIVEAWAY 👈</span>
         </a>     
-          </div>
-                  <p class="desc">Di Bawah Ini Tidak Wajib Saya Hanya Menawarkan Saja</p>
-                  <p class="desc">Gabung Channel Atau Website HanxxyModz Banyak Aplikasi MOD Lainnya Kalian Bisa DOWNLOAD Secara Gratis Anti Bayar! 😇</p>
-      </div>
-              <div class="link-list">
-               <a href="https://ik.imagekit.io/xk7ancs09/Proyek%20Baru%208%20_C7FFBD8__waifu2x_art_noise1_scale.png?updatedAt=1759567872300" class="link-item" target="_blank">
-          <i class="fas fa-telegram"></i> <span>LIHAT ANALISYTICT 801 RIBU SUPPORTED WEBSITE</span>
-      	     <a href="https://hanxxy.blogspot.com/?m=1" class="link-item" target="_blank">
-          <i class="fab fa-blogger"></i> <span>WEBSITE HANXXYMODZ</span>
-        </a>
-        <a href="https://whatsapp.com/channel/0029Vb6p1caAojYyeBoIio3l" class="link-item" target="_blank">
-          <i class="fab fa-whatsapp"></i> <span>SALURAN WHATAPPS</span>
-        </a>
-        <a href="https://t.me/hanxxymods" class="link-item" target="_blank">
-          <i class="fab fa-telegram"></i> <span>CHANNEL TELEGRAM</span>
-        </a>
+          
        
         </a>
       </div>
     </div>
   </body>
 </html>
+
 
 
 
