--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Bidang -->
         <p class="field">Special 801 Ribu Orang Supported My Website</p>
         <!-- Deskripsi singkat -->
-        <p class="desc">HanxxyModz Mengadakan GiveAway Special 801 Ribu Orang Supported Di Website, Wajib Follow & Subscribe & Komen Di Postingan GiveAway Admin HanxxyModz Nya Ya Untuk Daftar GIVEAWAY Nya Dan Lalu Isi Semua Di Halaman Formulirnya 😇</p>
+        <p class="desc">HanxxyModz Mengadakan GiveAway Special 801 Ribu Orang Supported Di Website, Wajib Follow & Subscribe & Komen Di Postingan GiveAway Admin HanxxyModz Nya Ya Untuk Daftar GIVEAWAY Nya Dan Lalu Isi Semua Di Halaman Formulirnya, Cepat Cepat Daftar Ya Karna Beberapa jam kemudian Akan Di tutup Terimakasih  😇</p>
       </div>
       
       <!-- Daftar Tautan atau Link -->
@@ -46,6 +46,7 @@
     </div>
   </body>
 </html>
+
 
 
 
